[gd_scene load_steps=2 format=3 uid="uid://bof4s4qnajxtw"]

[ext_resource type="Script" path="res://scenes/pause_menu.gd" id="1_6l73s"]

[node name="PauseMenu" type="Node2D"]
script = ExtResource("1_6l73s")

[node name="Panel" type="Panel" parent="."]
offset_left = 318.0
offset_top = 120.0
offset_right = 810.0
offset_bottom = 499.0

[node name="TextEdit" type="TextEdit" parent="Panel"]
layout_mode = 0
offset_left = 152.0
offset_top = 55.0
offset_right = 347.0
offset_bottom = 118.0
theme_override_font_sizes/font_size = 35
text = "     Menu"

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 0
offset_left = 198.0
offset_top = 145.0
offset_right = 302.0
offset_bottom = 358.0

[node name="Save" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(50, 30)
layout_mode = 2
text = "Save"

[node name="Load" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(50, 30)
layout_mode = 2
text = "Load"

[node name="Control" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(50, 30)
layout_mode = 2
text = "Control"

[node name="Credit" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(50, 30)
layout_mode = 2
text = "Credit"

[node name="Exit" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(50, 30)
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="Panel/VBoxContainer/Control" to="." method="_on_control_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Credit" to="." method="_on_credit_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Exit" to="." method="_on_quit_pressed"]
